--- a/my-app/src/components/Pages/LandingPage/SideMenu/SideMenu.module.css
+++ b/my-app/src/components/Pages/LandingPage/SideMenu/SideMenu.module.css
@@ -8,5 +8,22 @@
 }
 
 .anchorTag:hover{
-    color: rgb(181, 181, 243)
+    color: skyblue
+}
+
+.SideModal{
+    
+        background-color: "rgb(0;88;163)";
+        width: "36.26%";
+        margin-left: "0px";
+        position: "relative";
+        left: "0px";
+        top: "0px";
+        height: "100vh";
+        border-radius: "0px";
+        z-index: "1";
+        box-sizing: "border-box";
+        padding-top: "12px";
+        padding-left: "30px";
+      
 }
