--- a/my-app/src/components/Pages/LandingPage/Banner/Banner.module.css
+++ b/my-app/src/components/Pages/LandingPage/Banner/Banner.module.css
@@ -12,8 +12,7 @@
     align-items: center;
     height: 599px;
     width: 61.3%;
-    /* object-fit: cover;
-    border: 1px solid black; */
+   
     -moz-background-size: cover;
     -webkit-background-size: cover;
     -o-background-size: cover;
@@ -28,9 +27,10 @@
     background-color: rgb(255,219,0);
     border-radius: 5px;
     cursor: pointer;
-    padding-top: 161px;
-    box-sizing: border-box;
-    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-end
 }
 
 
@@ -49,16 +49,47 @@
     left: 10px;
 }
 
-.TransitionButton{
-    margin-top: -160px;
+.GoshoppingContainer{
+    
+    font-size: 30px;
+    font-weight: 600;
     text-align: left;
-    background-color:rgb(255,219,0);
-    height: 5.8rem;
-    box-sizing: border-box;
-    padding-left: 40px;
-    border-top:1px solid rgba(0, 0, 0, 0.349);
-    display: flex;
-    align-items: center;
-   
+    padding-left: 30px;
+    margin-bottom: 200px;
+    width: 100%;
 }
 
+
+@media only screen and (max-width: 1020px) {
+    .Banner{
+       
+        flex-direction: column;
+        align-items: flex-start;
+        row-gap: 1rem;
+    }
+   
+    .BannerLeftPart{
+        width: 100%;
+        height: 360px;
+        background-position: -5px ;
+    }
+    .BannerRightPart{
+        width: 100%;
+        height: fit-content;
+        justify-content: center;
+    }
+    .GoshoppingContainer{
+      margin-bottom: 0px;
+      height: 100px;
+      display: flex;
+      align-items: center;
+  }
+
+  .BannerTitle{
+   
+     display: flex;
+     width: 70%;
+  }
+  }
+
+  
