--- a/my-app/src/components/Pages/LandingPage/Banner/Banner.module.css
+++ b/my-app/src/components/Pages/LandingPage/Banner/Banner.module.css
@@ -1,4 +1,5 @@
 .Banner{
+    margin-top: 60px;
     display: flex;
     justify-content: center;
     column-gap: 1.3%;
@@ -57,6 +58,8 @@
     padding-left: 30px;
     margin-bottom: 200px;
     width: 100%;
+    text-decoration: none;
+    color: black;
 }
 
 
