--- a/my-app/src/components/Pages/SignUpPage/signup.module.css
+++ b/my-app/src/components/Pages/SignUpPage/signup.module.css
@@ -1,7 +1,8 @@
 
 
 .leftSection{
-    
+    width: 50%;
+    max-width: 100vh;
 }
 
 .PicBig img{
@@ -16,5 +17,33 @@
     height: 192px;
     object-fit: cover;
     grid-area: pic2;
+}
+
+
+.picContainer{
+    display: flex;
+    margin-top: 53px;
+   
+}
+
+.leftSection{
+    margin-left: 64px;
+    
+}
+
+.SignUpContainer{
+    margin-top: 123px;
+    display: flex;
+}
+
+.PictureFlex1{
+    display: flex;
+    flex-direction: column;
+}
+
+.PictureFlex2{
+    display: flex;
+    flex-direction: column;
+    margin-left: 5px;
 }
 
