--- a/my-app/src/components/Pages/About/AboutComponents/Header.module.css
+++ b/my-app/src/components/Pages/About/AboutComponents/Header.module.css
@@ -1,87 +1,82 @@
-*{
+/* *{
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
+} */
+
+.header {
+  max-width: 100%;
+  height: 600px;
+  background-position: left;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+
+  background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
+    url("https://www.ikea.com/global/en/images/PH_178659_optimized_a457170442.jpg?f=g");
+
+  background: no-repeat cover center;
+  background-size: cover;
+  position: relative;
 }
 
-.header{
-    max-width: 100%; 
-    height: 600px; 
-     background-position: left;
-     background-attachment: fixed; 
-     background-repeat: no-repeat; 
- 
-      background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),url('https://www.ikea.com/global/en/images/PH_178659_optimized_a457170442.jpg?f=g') ;  
-   
-     background: no-repeat cover center; 
-     background-size: cover;
-  position: relative; 
+.textHead {
+  color: white;
+  font-size: 60px;
+  font-weight: 900;
+  position: absolute;
+  left: 260px;
+  top: 480px;
 }
 
+/* for mobile */
 
-.textHead{
-    color:white;
-    font-size: 60px;
-    font-weight:900;
+@media only screen and (max-width: 768px) {
+  .header {
+    max-width: 100%;
+    height: 320px;
+    background-position: left;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+
+    background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
+      url("https://www.ikea.com/global/en/images/PH_178659_optimized_a457170442.jpg?f=s");
+
+    background: no-repeat cover center;
+    background-size: cover;
+    position: relative;
+  }
+  .textHead {
+    color: white;
+    font-size: 35px;
+    font-weight: 900;
     position: absolute;
-    left: 260px ;
-    top: 480px;
-
+    left: 20px;
+    top: 260px;
+  }
 }
 
+/* for  tab */
+@media only screen and (min-width: 768px) and (max-width: 1020px) {
+  .header {
+    max-width: 100%;
+    height: 480px;
+    background-position: left;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
 
- /* for mobile */
+    background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
+      url("https://www.ikea.com/global/en/images/PH_178659_optimized_a457170442.jpg?f=s");
 
-  @media only  screen and (max-width:768px ) {
-   
-    .header{
-        max-width: 100%; 
-        height: 320px; 
-         background-position: left;
-         background-attachment: fixed; 
-         background-repeat: no-repeat; 
-     
-          background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),url('https://www.ikea.com/global/en/images/PH_178659_optimized_a457170442.jpg?f=s') ;  
-       
-         background: no-repeat cover center; 
-         background-size: cover;
-      position: relative; 
-    }
-    .textHead{
-        color:white;
-        font-size: 35px;
-        font-weight:900;
-        position: absolute;
-        left: 20px ;
-        top: 260px;
-    
-    }
-
- } 
-
- /* for  tab */
-  @media only  screen and (min-width:768px ) and (max-width:1020px) {
-
-    .header{
-        max-width: 100%; 
-        height: 480px; 
-         background-position: left;
-         background-attachment: fixed; 
-         background-repeat: no-repeat; 
-     
-          background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),url('https://www.ikea.com/global/en/images/PH_178659_optimized_a457170442.jpg?f=s') ;  
-       
-         background: no-repeat cover center; 
-         background-size: cover;
-      position: relative; 
-    }
-    .textHead{
-        color:white;
-        font-size: 50px;
-        font-weight:900;
-        position: absolute;
-        left: 20px ;
-        top: 350px;
-    
-    }
- } 
+    background: no-repeat cover center;
+    background-size: cover;
+    position: relative;
+  }
+  .textHead {
+    color: white;
+    font-size: 50px;
+    font-weight: 900;
+    position: absolute;
+    left: 20px;
+    top: 350px;
+  }
+}
