--- a/my-app/src/components/Pages/LandingPage/SloganComponent4/Slogan.module.css
+++ b/my-app/src/components/Pages/LandingPage/SloganComponent4/Slogan.module.css
@@ -1,49 +1,49 @@
-.Slogan{
-    box-sizing: border-box;
-    padding-top: 94px;
-    font-size: 48px;
-    line-height: 55.08px;
-    letter-spacing: normal;
-    font-weight: 700;
-    text-align: center;
-    font-family: sans-serif;
-    background-color: rgb(240,237,232);
+.Slogan {
+  box-sizing: border-box;
+  padding-top: 94px;
+  font-size: 48px;
+  line-height: 55.08px;
+  letter-spacing: normal;
+  font-weight: 700;
+  text-align: center;
+  font-family: sans-serif;
+  background-color: rgb(240, 237, 232);
 }
 
-.SloganContainer img{
-    margin-top: 81px;
-    height: 45px;
-    width: 116px;
+.SloganContainer .img {
+  /* margin-top: 81px; */
+  margin: 80px auto;
+  height: 45px;
+  width: 116px;
 }
-.List{
-    margin-top: 61px;
-display: flex;
-flex-wrap: wrap;
-list-style-type: none;
-justify-content: center;
-font-size: 18px;
-line-height: 40px;
-vertical-align: baseline;
-font-weight: 400;
-color: rgba(0, 0, 0, 0.849);
-column-gap: 1%;
+.List {
+  margin-top: 61px;
+  display: flex;
+  flex-wrap: wrap;
+  list-style-type: none;
+  justify-content: center;
+  font-size: 18px;
+  line-height: 40px;
+  vertical-align: baseline;
+  font-weight: 400;
+  color: rgba(0, 0, 0, 0.849);
+  column-gap: 1%;
 }
 
 .ListAfterSlogan a {
-    text-decoration: none;
-    color: black;
+  text-decoration: none;
+  color: black;
 }
-.ListAfterSlogan a:hover{
-    text-decoration: underline;
-    text-decoration-thickness: 0.15em;
+.ListAfterSlogan a:hover {
+  text-decoration: underline;
+  text-decoration-thickness: 0.15em;
 }
-.footerImage{
-    width: 100%;
-
+.footerImage {
+  width: 100%;
 }
 
 @media only screen and (max-width: 768px) {
-    .Slogan{
-        font-size: 35px;
-    }
+  .Slogan {
+    font-size: 35px;
+  }
 }
