--- a/my-app/src/ComponentsB/ProductAll/Css/ListCart.module.css
+++ b/my-app/src/ComponentsB/ProductAll/Css/ListCart.module.css
@@ -5,6 +5,7 @@
   justify-content: space-between;
   border-top: 1px solid #484848;
   padding-top: 1rem;
+  padding-bottom: 8rem;
 }
 
 .image_cart {
