--- a/my-app/src/ComponentsB/ProductAll/Css/CartPage.module.css
+++ b/my-app/src/ComponentsB/ProductAll/Css/CartPage.module.css
@@ -30,6 +30,7 @@
   color: white;
   background-color: #0058a3;
   padding: 1rem 2rem;
+  /* border: 1px solid red; */
   font-size: 1rem;
   font-weight: bold;
   cursor: pointer;
@@ -49,9 +50,11 @@
 }
 
 .list_div {
-  position: relative;
+  /* position: relative; */
   top: 5rem;
-  padding-top: 1rem;
+  z-index: 0;
+  padding-top: 26rem;
+  margin-top: 1rem;
 }
 
 @media only screen and (max-width: 1143px) {
