--- a/my-app/src/components/Pages/HomePage/Categories.module.css
+++ b/my-app/src/components/Pages/HomePage/Categories.module.css
@@ -4,7 +4,7 @@
 }
 
 .cat div {
-    width: "100%";
+    width: 100%;
     height: 300px;
 }
 
@@ -12,30 +12,159 @@
     width: 150px;
     margin: 1rem;
 }
-@media only screen and (min-width: 768px) and (max-width: 1019px)  {
-    .product {
-        margin: auto;
-    }
-    
+.e, .f {
+    display: none;
 }
 
 .offer {
     width: 90%;
-    display: flex;
-    border: 1px solid red;
-    margin: auto;
+    display: grid;
+    margin: 3rem auto;
+    grid-template-areas: "a b c d";
+   row-gap: 0.4rem;
 }
 
 .product > img {
     object-fit: cover;
     width: 300px;
 }
+
 .offerProduct {
     width: "100px";
 }
 
 .product {
-    border: 1px solid red;
     width: 300px;
     text-align: left;
+    margin-top: 2rem;
+}
+.product > div {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+    margin-top: 10px
+}
+.product h4 {
+    color: blue;
+}
+
+
+.catUl {
+    display: flex;
+    width: 100%;
+    word-wrap: break-word;
+    justify-content: space-between;
+    margin: 2rem auto;
+   
+    background-color: white;
+}
+.catUl > li  {
+    list-style: none;
+}
+.catUl > li > button:hover {
+    background-color: rgb(226, 226, 231);
+
+}
+.catUl > li > button {
+    background-color: rgb(240, 240, 247);
+    font-weight: 600;
+    border: none;
+    padding: 6px 20px;
+    border-radius: 1rem;
+    width: fit-content;
+}
+.catNav {
+    width: 80%;
+    margin: 2rem auto;
+}
+.ideas > div img {
+ width: 100%;
+ display: block;
+}
+.ideas {
+    display: grid;
+    grid-template-areas: "a e i"
+                         "b f j"
+                         "c g k"
+                         "d h l";
+    width: 80%;
+    height: 500px;
+    margin: auto;
+    row-gap: 0rem;
+    column-gap: 0rem;
+}
+.ideas > div {
+ margin: 0.6rem;
+}
+@media only screen and (min-width: 768px) and (max-width: 1270px)  {
+    .product {
+        margin: auto;
+        width: 100%;
+    }
+    .product > img {
+        object-fit: cover;
+        width: 100%;
+    }
+    .e, .f {
+        display: block;
+    }
+    .offer {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    grid-template-rows: auto auto;
+    grid-template-areas: "a b c"
+                         "e d f";
+
+     column-gap: 1rem;  
+     row-gap: 1rem;                  
+    }
+}
+
+@media only screen and (min-width: 400px) and (max-width: 767px)  {
+    .product {
+        margin: auto;
+        width: 100%;
+    }
+    .product > img {
+        object-fit: cover;
+        width: 100%;
+    }
+    .e, .f {
+        display: none;
+    }
+    .offer {
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-template-rows: auto auto;
+    grid-template-areas: "a b"
+                         "c d";
+
+     column-gap: 1rem;  
+     row-gap: 1rem;                  
+    }
+}
+@media only screen and (min-width: 200px) and (max-width: 399px)  {
+    .product {
+        margin: auto;
+        width: 100%;
+    }
+    .product > img {
+        object-fit: cover;
+        width: 100%;
+    }
+    .e, .f {
+        display: none;
+    }
+    .offer {
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-template-rows: auto auto;
+    grid-template-areas: "a"
+                         "b"
+                         "c"
+                         "d";
+
+     column-gap: 1rem;  
+     row-gap: 1rem;                  
+    }
 }
