--- a/my-app/src/components/Pages/LandingPage/Banner/BannerSearch.module.css
+++ b/my-app/src/components/Pages/LandingPage/Banner/BannerSearch.module.css
@@ -97,6 +97,19 @@
   box-sizing: border-box;
   padding-left: 10px;
 }
+.siteList{
+  list-style-type: none;
+  font-size: 16px;
+  font-weight: 400;
+  box-sizing: border-box;
+  padding-left: 10px;
+  margin-top: 10px;
+}
+
+.listDiv{
+  height: 130px;
+  overflow: auto;
+}
 
 @media only screen and (max-width: 1020px) {
   .accordionHeading {
